[gd_scene load_steps=3 format=3 uid="uid://crun6fa4m2ctc"]

[ext_resource type="Script" uid="uid://dpfgpwx8uxrlh" path="res://scenes/wnd_create_tag.gd" id="1_vgrpf"]
[ext_resource type="Theme" uid="uid://dyoqwqakkfsn2" path="res://scenes/style_menu.tres" id="2_jcu28"]

[node name="WndCreateTag" type="Window"]
oversampling_override = 1.0
title = "Tag Edit"
position = Vector2i(200, 100)
size = Vector2i(400, 400)
script = ExtResource("1_vgrpf")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_jcu28")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="TabContainer" type="TabContainer" parent="Panel/MarginContainer"]
layout_mode = 2
current_tab = 1

[node name="Manage_Groups" type="MarginContainer" parent="Panel/MarginContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/TabContainer/Manage_Groups"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="GridContainer" type="GridContainer" parent="Panel/MarginContainer/TabContainer/Manage_Groups/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/TabContainer/Manage_Groups/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Existing groups"

[node name="Label2" type="Label" parent="Panel/MarginContainer/TabContainer/Manage_Groups/VBoxContainer/GridContainer"]
layout_mode = 2
text = "New group"

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/TabContainer/Manage_Groups/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="taggroups" type="FlowContainer" parent="Panel/MarginContainer/TabContainer/Manage_Groups/VBoxContainer/GridContainer/ScrollContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/TabContainer/Manage_Groups/VBoxContainer/GridContainer/ScrollContainer/taggroups"]
layout_mode = 2
text = "Tag 1"

[node name="Label2" type="Label" parent="Panel/MarginContainer/TabContainer/Manage_Groups/VBoxContainer/GridContainer/ScrollContainer/taggroups"]
layout_mode = 2
text = "Tag 2"

[node name="Label3" type="Label" parent="Panel/MarginContainer/TabContainer/Manage_Groups/VBoxContainer/GridContainer/ScrollContainer/taggroups"]
layout_mode = 2
text = "Tag 2"

[node name="Label4" type="Label" parent="Panel/MarginContainer/TabContainer/Manage_Groups/VBoxContainer/GridContainer/ScrollContainer/taggroups"]
layout_mode = 2
text = "Tag 2"

[node name="Label5" type="Label" parent="Panel/MarginContainer/TabContainer/Manage_Groups/VBoxContainer/GridContainer/ScrollContainer/taggroups"]
layout_mode = 2
text = "Tag 2"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/TabContainer/Manage_Groups/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="txt_group" type="TextEdit" parent="Panel/MarginContainer/TabContainer/Manage_Groups/VBoxContainer/GridContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30.105)
layout_mode = 2
text = "grdrgg"
placeholder_text = "fcfxcb"

[node name="color_fg" type="ColorPickerButton" parent="Panel/MarginContainer/TabContainer/Manage_Groups/VBoxContainer/GridContainer/VBoxContainer"]
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
tooltip_text = "font color"
color = Color(1, 0.78191084, 0.988383, 1)

[node name="Label" type="Label" parent="Panel/MarginContainer/TabContainer/Manage_Groups/VBoxContainer/GridContainer/VBoxContainer/color_fg"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.5
offset_top = -10.0
offset_right = 40.5
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "font color"

[node name="color_bg" type="ColorPickerButton" parent="Panel/MarginContainer/TabContainer/Manage_Groups/VBoxContainer/GridContainer/VBoxContainer"]
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
tooltip_text = "background"
color = Color(1, 0.26666668, 1, 1)

[node name="Label" type="Label" parent="Panel/MarginContainer/TabContainer/Manage_Groups/VBoxContainer/GridContainer/VBoxContainer/color_bg"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.5
offset_top = -10.0
offset_right = 40.5
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
text = "bg color"

[node name="bt_add_group" type="Button" parent="Panel/MarginContainer/TabContainer/Manage_Groups/VBoxContainer/GridContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Save / Modify"

[node name="bt_del_group" type="Button" parent="Panel/MarginContainer/TabContainer/Manage_Groups/VBoxContainer/GridContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Todo Delete"

[node name="Manage_Tags" type="MarginContainer" parent="Panel/MarginContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/MarginContainer/TabContainer/Manage_Tags"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="GridContainer" type="GridContainer" parent="Panel/MarginContainer/TabContainer/Manage_Tags/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/TabContainer/Manage_Tags/VBoxContainer2/GridContainer"]
layout_mode = 2
text = "Existing tags"

[node name="Label2" type="Label" parent="Panel/MarginContainer/TabContainer/Manage_Tags/VBoxContainer2/GridContainer"]
layout_mode = 2
text = "New tag"

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/TabContainer/Manage_Tags/VBoxContainer2/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="tags" type="FlowContainer" parent="Panel/MarginContainer/TabContainer/Manage_Tags/VBoxContainer2/GridContainer/ScrollContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/TabContainer/Manage_Tags/VBoxContainer2/GridContainer/ScrollContainer/tags"]
layout_mode = 2
text = "Tag 1"

[node name="Label2" type="Label" parent="Panel/MarginContainer/TabContainer/Manage_Tags/VBoxContainer2/GridContainer/ScrollContainer/tags"]
layout_mode = 2
text = "Tag 2"

[node name="Label3" type="Label" parent="Panel/MarginContainer/TabContainer/Manage_Tags/VBoxContainer2/GridContainer/ScrollContainer/tags"]
layout_mode = 2
text = "Tag 2"

[node name="Label4" type="Label" parent="Panel/MarginContainer/TabContainer/Manage_Tags/VBoxContainer2/GridContainer/ScrollContainer/tags"]
layout_mode = 2
text = "Tag 2"

[node name="Label5" type="Label" parent="Panel/MarginContainer/TabContainer/Manage_Tags/VBoxContainer2/GridContainer/ScrollContainer/tags"]
layout_mode = 2
text = "Tag 2"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/TabContainer/Manage_Tags/VBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="txt_tag" type="TextEdit" parent="Panel/MarginContainer/TabContainer/Manage_Tags/VBoxContainer2/GridContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30.105)
layout_mode = 2
text = "grdrgg"
placeholder_text = "fcfxcb"

[node name="sel_group" type="OptionButton" parent="Panel/MarginContainer/TabContainer/Manage_Tags/VBoxContainer2/GridContainer/VBoxContainer"]
layout_mode = 2

[node name="bt_add_tag" type="Button" parent="Panel/MarginContainer/TabContainer/Manage_Tags/VBoxContainer2/GridContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Save / Modify"

[node name="bt_del_tag" type="Button" parent="Panel/MarginContainer/TabContainer/Manage_Tags/VBoxContainer2/GridContainer/VBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Todo Delete"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="tab_selected" from="Panel/MarginContainer/TabContainer" to="." method="_on_tab_container_tab_selected"]
[connection signal="text_changed" from="Panel/MarginContainer/TabContainer/Manage_Groups/VBoxContainer/GridContainer/VBoxContainer/txt_group" to="." method="_on_txt_group_text_changed"]
[connection signal="gui_input" from="Panel/MarginContainer/TabContainer/Manage_Groups/VBoxContainer/GridContainer/VBoxContainer/color_fg" to="." method="_on_color_fg_gui_input"]
[connection signal="pressed" from="Panel/MarginContainer/TabContainer/Manage_Groups/VBoxContainer/GridContainer/VBoxContainer/bt_add_group" to="." method="_on_bt_add_group_pressed"]
[connection signal="text_changed" from="Panel/MarginContainer/TabContainer/Manage_Tags/VBoxContainer2/GridContainer/VBoxContainer/txt_tag" to="." method="_on_txt_tag_text_changed"]
[connection signal="item_selected" from="Panel/MarginContainer/TabContainer/Manage_Tags/VBoxContainer2/GridContainer/VBoxContainer/sel_group" to="." method="_on_sel_group_item_selected"]
[connection signal="pressed" from="Panel/MarginContainer/TabContainer/Manage_Tags/VBoxContainer2/GridContainer/VBoxContainer/bt_add_tag" to="." method="_on_bt_add_tag_pressed"]
